# sigongbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yaml  pyproject.toml
.github/workflows/: deploy.yaml  remind.yaml
app/: config.py  constants.py  main.py  utils.py
app/database/: __init__.py  pomodoro.py  retrospective.py  schema.sql  supabase.py
app/database/schemas/: retrospective.sql
app/slack/: event_handler.py  pomodoro_scheduler.py
app/slack/events/: action_view_retrospective_detail.py  channel_created.py  command_admin.py  command_my_retrospectives.py  command_pomodoro.py  command_retrospective.py  message.py  view_admin_menu.py  view_invite_channel.py  view_pomodoro_submit.py  view_retrospective_submit.py
nginx/conf.d/: default.conf
scripts/: commit-msg-convention.py  prod.sh
tests/: test_utils.py
