[tool.poetry]
name = "sigongbot"
version = "0.1.0"
description = "슬랙 회고 수집 봇"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "1.18.0"
slack-sdk = "^3.26.1"
supabase = "2.5.3"
python-dotenv = "1.0.0"
orjson = "^3.10.18"
loguru = "^0.7.3"
regex = "^2024.11.6"
pydantic-settings = "^2.9.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
aiohttp = "^3.11.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-sugar = "^1.0.0"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
